# sc-controller

./: .gitignore  README.md  appimage-build.sh  daemon.sh  generate-icons.py  generate_svg.py  oldsetup.py  pyproject.toml  requirements.txt  run.sh
scc/: cemuhook_server.py  config.py  constants.py  device_monitor.py  menu_data.py  modifiers.py  profile.py  sccdaemon.py  special_actions.py  uinput.py
scc/drivers/: sc_by_cable.py  sc_dongle.py  usb.py
scc/gui/: action_editor.py  controller_settings.py  controller_widget.py  gestures.py  global_settings.py  keycode_to_key.py  simple_chooser.py  svg_widget.py
scc/gui/ae/: __init__.py  gyro.py
scc/gui/creg/: grabs.py
scc/lib/: jsonencoder.py
scc/osd/: gesture_display.py  keyboard.py  menu.py  quick_menu.py  slave_mapper.py
scc/x11/: autoswitcher.py  scc_autoswitch_daemon.py
sccontroller.egg-info/: SOURCES.txt
scripts/: appimage-AppRun.sh
src/sc-controller/: actions.py  constants.py  custom.py  macros.py  mapper.py  parser.py  poller.py  scripts.py  tools.py
src/sc-controller/drivers/: hiddrv.py  sc_by_bt.py  steamdeck.py
src/sc-controller/foreign/: vdf.py  vdffz.py
src/sc-controller/gui/: aboutdialog.py  app.py  controller_image.py  daemon_manager.py  editor.py  icon_chooser.py  key_grabber.py  macro_editor.py  modeshift_editor.py  profile_switcher.py  statusicon.py  userdata_manager.py
src/sc-controller/lib/: __init__.py  daemon.py  eudevmonitor.py  hidparse.py
src/sccontroller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_docs.py  test_vdf.py
tests/test_strings/: __init__.py
(+13 files in other folders)
