[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sc-controller"
version = "0.0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version>"3.10"',
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters
